Fix name for rbc project

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,7 +26,7 @@ requirements:
     - pandas
     - pyomnisci >=0.27.0
     - pyomniscidb >=5.5.2
-    - rbc-project >=0.4.0
+    - rbc >=0.4.0
     - sqlalchemy <1.4
 
 
